--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.17",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
