--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7"
@@ -25,6 +26,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-fetch-blob": "^0.10.7",
     "babel-plugin-root-import": "^6.6.0",
     "typescript": "~4.3.5"
   },
