--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.13",
+    "expo-file-system": "~14.1.0",
+    "expo-media-library": "~14.2.0",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.17",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-blob-util": "^0.16.2",
+    "react-native-csv": "^0.2.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-svg": "12.3.0",
